test/classes/diten/passSubClassByRef.good
passSubClassByRef.chpl:6: error: unresolved call 'foo(C)'
passSubClassByRef.chpl:3: note: candidates are: foo(ref obj: object)
